[workspace]
members = ["encoding-arg",
	"unzipper", 
	"unzipper-lib"
]
resolver = "2"
default-members = ["unzipper"]

[profile.release]
strip = "debuginfo"
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"

[workspace.package]
edition = "2024"
authors = ["Axel Lord"]
license = "MIT OR Apache-2.0"
version = "0.1.0"

[workspace.lints.rust]
missing_docs = "warn"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
allow_attributes = "warn"
case_sensitive_file_extension_comparisons = "warn"
dbg_macro = "warn"
future_not_send = "warn"
missing_const_for_fn = "warn"
missing_docs_in_private_items = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
missing_safety_doc = "warn"
print_stderr = "warn"
print_stdout = "warn"
std_instead_of_core = "warn"
str_to_string = "warn"
todo = "warn"
unused_result_ok = "warn"

[workspace.dependencies]
unzipper-lib = { path = "unzipper-lib" }
chardetng = "0.1.17"
clap = "4.5.60"
clap_complete = "4.5.66"
color-eyre = "0.6.5"
encoding_rs = "0.8.35"
env_logger = "0.11.9"
log = "0.4.29"
mimalloc = "0.1.48"
rayon = "1.11.0"
tap = "1.0.1"
thiserror = "2.0.18"
zip = "8.2.0"
bytesize = "2.3.1"
encoding-arg = { path = "encoding-arg" }

