[package]
name = "unzipper"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"] }
clap_complete.workspace = true
color-eyre.workspace = true
encoding_rs.workspace = true
env_logger.workspace = true
log.workspace = true
mimalloc.workspace = true
unzipper-lib.workspace = true

[lints]
workspace = true
